[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/icon_darker.png" type="Texture" id=1]
[ext_resource path="res://ToolButtons/DarkerButton.gd" type="Script" id=2]
[ext_resource path="res://tool_button_background.png" type="Texture" id=3]

[node name="DarkerButton" type="TextureRect"]
margin_left = 54.0
margin_top = 378.0
margin_right = 104.0
margin_bottom = 428.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 1 )
stretch_mode = 4
script = ExtResource( 2 )
background = ExtResource( 3 )

[connection signal="gui_input" from="." to="." method="_on_DarkerButton_gui_input"]
[connection signal="pressed" from="." to="." method="_on_DarkerButton_pressed"]
